--- a/Candy-Dozer/Candy Dozer/Assembly-CSharp.csproj
+++ b/Candy-Dozer/Candy Dozer/Assembly-CSharp.csproj
@@ -45,6 +45,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\CandyDestroyer.cs" />
      <Compile Include="Assets\Pusher.cs" />
      <Compile Include="Assets\Shooter.cs" />
  <Reference Include="UnityEngine.UI">
