--- a/Candy-Dozer/Candy Dozer/Assembly-CSharp.csproj
+++ b/Candy-Dozer/Candy Dozer/Assembly-CSharp.csproj
@@ -45,10 +45,11 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-     <Compile Include="Assets\CandyDestroyer.cs" />
-     <Compile Include="Assets\CandyHolder.cs" />
-     <Compile Include="Assets\Pusher.cs" />
-     <Compile Include="Assets\Shooter.cs" />
+     <Compile Include="Assets\Script\AutoDestroyEffect.cs" />
+     <Compile Include="Assets\Script\CandyDestroyer.cs" />
+     <Compile Include="Assets\Script\CandyHolder.cs" />
+     <Compile Include="Assets\Script\Pusher.cs" />
+     <Compile Include="Assets\Script\Shooter.cs" />
  <Reference Include="UnityEngine.UI">
  <HintPath>/Applications/Unity/Unity.app/Contents/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
  </Reference>
